--- a/www/tpl/modules/edit.html
+++ b/www/tpl/modules/edit.html
@@ -44,7 +44,7 @@
 															<b>Current Image</b>
 														</div>
 														<div class="col-md-12" style="margin-bottom:12px">
-															<img class="postimage" src="images/post/{{joke[0].post_image}}">
+															<img class="postimage" src="{{base_url}}images/post/{{joke[0].post_image}}">
 
 														</div>
 														<div class="col-md-12 labe">
