--- a/www/tpl/modules/profile_view.html
+++ b/www/tpl/modules/profile_view.html
@@ -100,7 +100,7 @@
 													<!-- {{joke}} -->
 														<div class="posttxt">{{joke.post_text}}</div>
 														<div ng-if="joke.post_image" class="postimg">
-															<img class="postimage" src="images/post/{{joke.post_image}}">
+															<img class="postimage" src="{{base_url}}images/post/{{joke.post_image}}">
 														</div>
 												</div>
 											</div>
